Fix header alignment in RTL languages

--- a/src/components/Header/SidebarToggle.css
+++ b/src/components/Header/SidebarToggle.css
@@ -1,7 +1,11 @@
 #menu-toggle {
 	--border-color-default: transparent;
-	margin-right: -1.5rem;
+	margin-inline-end: -1.5rem;
 	transition-property: border-color, background-color, color;
+}
+
+[dir='rtl'] #menu-toggle {
+	margin-inline-end: -1rem;
 }
 
 .mobile-sidebar-toggle #menu-toggle {
@@ -12,7 +16,7 @@
 
 @media (hover: hover) {
 	#menu-toggle {
-		margin-right: -1rem;
+		margin-inline-end: -1rem;
 	}
 }
 
